--- a/style/styles_assignment.css
+++ b/style/styles_assignment.css
@@ -1,10 +1,52 @@
 @import url('https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap');
 /* font-family : "Azeret Mono", monospace; */
 
+
  *{
     margin: 0;
     padding: 0;
 } 
+/* Nav styles */
+nav{
+   display: flex;
+   align-items:center ;
+    justify-content: space-between;
+   
+}
+.nav-title{
+   padding:50px 900px 50px 150px;
+   color: rgb(13, 19, 33);
+font-family: Azeret Mono;
+font-size: 28px;
+font-weight: 800;
+line-height: 33px;
+letter-spacing: 0%;
+/* text-align: left; */
+}
+.nav-resume{
+   box-sizing: border-box;
+border: 1px solid rgb(13, 19, 33);
+border-radius: 8px;
+opacity: 0.8;
+width: 230px;
+height: 75px;
+margin-right: 50px;
+/* color: #0D1321; */
+}
+ .nav-subtitle{
+   /* color: rgb(13, 19, 33); */
+font-family: Azeret Mono;
+font-size: 20px;
+font-weight: 600;
+line-height: 23px;
+letter-spacing: 0%;
+text-align: center;
+border: none;
+/* margin: 0px 10px; */
+padding: 17px 24px 8px 24px;
+}
+
+/* Banner section style */
 #hero{
     height: 691px;
     background-image: url("../assets/Hero-bg.png");
@@ -49,17 +91,6 @@ opacity: 0.7;
 padding-top: 24px;
  }
 
-  /* .section-title{
-    font-size: 35px;
-    font-weight:bolder;
-    color: #0D1321;
- }
- .section-description{
-    font-size: 16px;
-    color:rgba(13, 19, 33, 1)
- }  */
-
-
 /* Button */
   .btn-container{
     text-align: center;
@@ -80,7 +111,7 @@ text-align: center;
 padding: 30px;
  }
 
-/* WHY BOX */
+/* WHY section style */
 #why-box{
    width: 1000 px;
    margin: 70px 150px;
@@ -202,6 +233,7 @@ font-weight: 800;
 line-height: 37px;
 letter-spacing: 0%;
 text-align: center;
+padding-bottom: 28px;
 }
 .inspiration .sub-title{
 color: rgb(13, 19, 33);
@@ -227,8 +259,8 @@ padding: 32px;
    border-radius: 24px;
    overflow: hidden; 
 }
-/* My targets styles*/
 
+/* My targets styles*/
 .skills{
   max-width: 1208px;
    margin: 140px 150px;
@@ -260,8 +292,6 @@ opacity: 0.7;
 .different-btg1{
    border-radius: 16px;
 background: rgba(255, 76, 30, 0.05);
-/* width: 385px; */
-   /* background-color: #FF4C1E0D; */
 }
 .different-btg2{
    border-radius: 16px;
@@ -307,6 +337,7 @@ letter-spacing: 0%;
 text-align: left;
 text-decoration-line: underline;
 }
+
 /* Support section style */
 .support-box {
       width: 1200px;
@@ -346,7 +377,6 @@ padding-bottom: 24px;
 .support-box  .email-btn{
    display: flex;
    justify-content: center;
-   
 }
 section input[type="email"]{
     width: 580px;
@@ -382,6 +412,25 @@ font-weight: 600;
 line-height: 23px;
 letter-spacing: 0%;
 text-align: center;
+}
 
+/* footer style */
+#footer-part{
+   width: 1526px;
+   border-radius: 16px;
+   background: rgba(13, 19, 33, 0.03);
+   padding: 32px 150px 32px 150px;
+   padding-top:80px ;
+   
+}
+#footer-part .footer-contant{
+    display: flex; 
+   flex-direction: row;
+   justify-content: space-between;
+}
+#footer-part .footer-img .github{
+   padding-left: 30px;
+   padding-right: 30px;
+   /* justify-content: end; */
 }
 
