--- a/style/styles_assignment.css
+++ b/style/styles_assignment.css
@@ -139,10 +139,10 @@ line-height: 26px;
 letter-spacing: 0%;
 text-align: center;
 opacity: 0.7;
-
+padding-top: 25px;
 }
 #why-box .why-card , .why-card1{
-   padding: 48px 174px;
+   padding: 50px 150px;
   
 }
 .why-title{
