--- a/style/styles_assignment.css
+++ b/style/styles_assignment.css
@@ -2,10 +2,10 @@
 /* font-family : "Azeret Mono", monospace; */
 
 
- *{
+ /* *{
     margin: 0;
     padding: 0;
-} 
+}  */
 /* Nav styles */
 nav{
    display: flex;
@@ -14,7 +14,7 @@ nav{
    
 }
 .nav-title{
-   padding:50px 900px 50px 150px;
+    padding:50px 900px 50px 150px;
    color: rgb(13, 19, 33);
 font-family: Azeret Mono;
 font-size: 28px;
@@ -45,30 +45,93 @@ border: none;
 /* margin: 0px 10px; */
 padding: 17px 24px 8px 24px;
 }
-
-/* Banner section style */
 #hero{
+   width: 1526px;
+   height: 691px;
+   background-image:url(../assets/Hero-bg.png) ;
+   background-position: center;
+    background-size: cover;
+    display: flex; 
+    justify-content: center;  
+    align-items: center;  
+}
+#hero .banner{
+   width: 1057pxs;
+}
+#hero .banner .man{
+   /* display: flex;
+   justify-content: center; 
+ align-items: center; */
+ padding: 40px 635px 0px 635px;  
+}
+#hero .banner .title{
+   color: rgb(13, 19, 33);
+font-family: Azeret Mono;
+font-size: 48px;
+font-weight: 800;
+line-height: 58px;
+letter-spacing: 0%;
+text-align: center;
+padding-top: 15px;
+}
+#hero .banner .sub-title{
+   color: rgb(13, 19, 33);
+font-family: Azeret Mono;
+font-size: 24px;
+font-weight: 400;
+line-height: 33px;
+letter-spacing: 0%;
+text-align: center;
+opacity: 0.7;
+padding-top:5px;
+}
+.btn-container{
+   border-radius: 8px;
+/* background: rgb(13, 19, 33); */
+text-align: center;
+padding-bottom: 20px;
+}
+.btn-primary{
+   padding: 16px 20px 16px 20px;
+   border-radius: 8px;
+
+background: rgb(13, 19, 33);
+color: rgb(255, 255, 255);
+font-family: Azeret Mono;
+font-size: 18px;
+font-weight: 600;
+line-height: 18px;
+letter-spacing: 0%;
+text-align: center;
+padding: 30px;
+}
+/* Banner section style */
+/* #hero{
     height: 691px;
     background-image: url("../assets/Hero-bg.png");
     background-position: center;
+    background-size: cover;
     display: flex; 
     justify-content: center;  
-    align-items: center;   
-    /* flex-direction: column; */
+    align-items: center;  
 }
- #hero .banner {
-    width: 1020px;
+    /* flex-direction: column; */
+
+ /* #hero .banner {
+    width:1526px 
+ } */
+    /*1020px; */
       /* margin: 0 auto;   
       padding: 30px 215px 35px 215px;  */
       /* display: flex; */
       /* text-align: center; */
       /* align-items: center; */
- }
- #hero .banner .man{
-   padding: 0px 370px 40px 370px; 
- }
+ 
+ /* #hero .banner .man{
+   padding: 30px 400px 385px 400px; 
+ } */
 
-  #hero .banner .title{
+  /* #hero .banner .title{
     color: rgb(13, 19, 33);
 font-family: Azeret Mono;
 font-size: 45px;
@@ -76,11 +139,12 @@ font-weight: 800;
 line-height: 50px;
  letter-spacing: 0%;  
 text-align: center;
+}
 /* padding: 270px 0 px 170px 0 px; */
 /* margin-top: 32px; */
- } 
- #hero .banner .sub-title{
-    color: rgb(13, 19, 33);
+ 
+ /* #hero .banner .sub-title{
+   color: rgb(13, 19, 33);
 font-family: Azeret Mono;
 font-size: 16px;
 font-weight: 400;
@@ -89,10 +153,10 @@ letter-spacing: 0%;
 text-align: center;
 opacity: 0.7;
 padding-top: 24px;
- }
+ } */
 
 /* Button */
-  .btn-container{
+  /* .btn-container{
     text-align: center;
     padding-top: 20px;
   }
@@ -109,11 +173,13 @@ line-height: 18px;
 letter-spacing: 0%;
 text-align: center;
 padding: 30px;
- }
-
+ }  */
+/* main{
+   max-width: 1208px;
+} */
 /* WHY section style */
 #why-box{
-   width: 1000 px;
+    width: 1208 px; 
    margin: 70px 150px;
    background: rgba(13, 19, 33, 0.02);
    border-radius: 16px;
